#16773 closed bug (fixed)
Menu opens in wrong direction
Reported by: | miqlas | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Kits/Interface Kit/BMenu | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is 64 bit hrev54907.
The bookmarks menu in a full-screen WebPositive window opens in the wrong direction, making the menu unaccessible.
Attachments (1)
Change History (9)
by , 4 years ago
Attachment: | 9BD54794-B448-4AC8-816D-2588039463D8.png added |
---|
comment:1 by , 4 years ago
comment:4 by , 4 years ago
Platform: | x86-64 → All |
---|
comment:5 by , 4 years ago
The logic in BMenu goes this way:
- Does the menu fit in the space available to the bottom of the screen?
- If yes, open the menu downwards, otherwise, open the menu upwards
It seems to not check if opening upwards is even worse than opening downwards.
comment:6 by , 4 years ago
This can be observed in StyledEdit aswell, if you install the extra noto fonts package it will open the font menu to above.
comment:7 by , 4 years ago
Milestone: | Unscheduled → R1/beta3 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fixed in hrev55145.
comment:8 by , 21 months ago
Component: | Kits/Interface Kit → Kits/Interface Kit/BMenu |
---|
Note:
See TracTickets
for help on using tickets.
Weird. I didn't manage to replicate, is it only the bookmarks menu? Are other parts of the menu bar opening correctly?
FYI, I tried on 64bit hrev54911 with French & English locales (I don't know if this can have impact.) window maximized & real full-screen.